Adjust grid layout for small screen devices

--- a/content/message.html
+++ b/content/message.html
@@ -11,10 +11,10 @@
 	<section id="main">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-3">
+				<div class="col-sm-3">
 					<!-- @include _sidebar -->
 				</div>
-				<div class="col-md-9">
+				<div class="col-sm-9">
 					<h2>Successful renewal of business: Jane's Bakery</h2>
 				</div>
 			</div>
