--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<section id="main">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-sm-4">
 					<h2>Businesses</h2>
 					<ul class="link-list">
 						<li>
@@ -38,11 +38,11 @@
 					</ul>
 
 				</div>
-				<div class="col-md-4">
+				<div class="col-sm-4">
 					<h2>Recent messages</h2>
 					<div id="messages"></div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-sm-4">
 					<h2>News</h2>
 					<!-- @include _three_news_stories -->
 				</div>
