--- a/content/biz1/messages.html
+++ b/content/biz1/messages.html
@@ -25,12 +25,12 @@
 	<section id="main">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-3">
+				<div class="col-sm-3">
 					<!-- @include _sidebar -->
 				</div>
-				<div class="col-md-9">
+				<div class="col-sm-9">
 					<div class="row">
-						<div class="col-md-12">
+						<div class="col-sm-12">
 							<h1 class="no-margin">Messages</h1>
 							<div class="sub-head">Sent to ABN 66 123 456 789 (Jane's Bakery)</div>
 
