--- a/content/biz1/representatives.html
+++ b/content/biz1/representatives.html
@@ -11,10 +11,10 @@
 	<section id="main">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-3">
+				<div class="col-sm-3">
 					<!-- @include _sidebar -->
 				</div>
-				<div class="col-md-9">
+				<div class="col-sm-9">
 					<h1 class="no-margin">Representatives</h1>
 					<div class="sub-head">Jane's Bakery ABN 66 123 456 789</div>
 				</div>
