--- a/content/biz1/services.html
+++ b/content/biz1/services.html
@@ -11,22 +11,22 @@
 	<section id="main">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-3">
+				<div class="col-sm-3">
 					<!-- @include _sidebar -->
 				</div>
-				<div class="col-md-9">
+				<div class="col-sm-9">
 					<div class="row">
-						<div class="col-md-12">
+						<div class="col-sm-12">
 							<h1 class="no-margin">Services</h1>
 							<div class="sub-head">Jane's Bakery ABN 66 123 456 789</div>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-6">
+						<div class="col-sm-6">
 							<h2>Frequently used services</h2>
 							<!-- @include _frequent_services -->
 						</div>
-						<div class="col-md-6">
+						<div class="col-sm-6">
 							<h2>Government agencies</h2>
 							<div class="section-box">
 								Search
@@ -43,7 +43,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-12">
+						<div class="col-sm-12">
 							<h2>More services</h2>
 							<p>Search</p>
 							<p>IA</p>
