More fluid layouts

--- a/content/biz1/messages.html
+++ b/content/biz1/messages.html
@@ -23,12 +23,12 @@
 	</script>
 
 	<section id="main">
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row">
-				<div class="col-sm-3">
+				<div class="col-sm-4 col-md-3">
 					<!-- @include _sidebar -->
 				</div>
-				<div class="col-sm-9">
+				<div class="col-sm-8 col-md-9">
 					<div class="row">
 						<div class="col-sm-12">
 							<h1 class="no-margin">Messages</h1>
