--- a/content/biz1/index.html
+++ b/content/biz1/index.html
@@ -19,12 +19,12 @@
 	<section id="main">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-sm-4 col-md-3">
+				<div class="col-sm-3">
 					<!-- @include _sidebar -->
 				</div>
-				<div class="col-sm-8 col-md-9">
+				<div class="col-sm-9">
 					<div class="row">
-						<div class="col-sm-12 col-md-12">
+						<div class="col-sm-12">
 							<h1 class="no-margin">Jane's Bakery</h1>
 							<div class="sub-head">
 								ABN 66 123 456 789 <span>&ndash;</span>
@@ -36,14 +36,14 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-sm-12 col-md-6">
+						<div class="col-sm-6">
 							<h2>Frequently used services</h2>
 							<!-- @include _frequent_services -->
 							<div class="section-box">
 								More <a href="<!-- @path biz1/services.html -->">services</a>
 							</div>
 						</div>
-						<div class="col-sm-12 col-md-6">
+						<div class="col-sm-6">
 							<h2>Recent messages</h2>							
 							<div id="messages"></div>
 							<div class="section-box">
@@ -52,15 +52,15 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-sm-12 col-md-12">
+						<div class="col-sm-12">
 							<h2>News</h2>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-sm-6 col-md-6">
+						<div class="col-sm-6">
 							<!-- @include _three_news_stories -->
 						</div>
-						<div class="col-sm-6 col-md-6">
+						<div class="col-sm-6">
 							<div class="news-story">
 								<a href="#">Protect your business from cybercrime</a>
 								<p>The Australian Cybercrime Online Reporting Network (ACORN) is an Australia-wide initiative that allows the public to securely report cybercrime.</p>
