--- a/content/biz1/settings.html
+++ b/content/biz1/settings.html
@@ -9,7 +9,7 @@
 	<!-- @include _header -->
 
 	<section id="main">
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-3">
 					<!-- @include _sidebar -->
