--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- @include _header -->
 
 	<section id="main">
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-4">
 					<h2>Businesses</h2>
