Adjust homepage biz / notebook

--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<h2>Businesses</h2>
-					<ul class="link-list">
-						<li>
-							<a href="<!-- @path biz1/index.html -->">Jane's Bakery</a><br />
-							ABN 66 123 456 789
-						</li>
-					</ul>
 					<div class="section-box">
-						+ <a href="">Add a business</a>
+						<ul class="link-list">
+							<li>
+								<a href="<!-- @path biz1/index.html -->">Jane's Bakery</a><br />
+								ABN 66 123 456 789
+							</li>
+						</ul>
+					</div>
+					<div class="section-footer">
+						<a>Add a business</a>
 					</div>
 
 					<h2>Noteboooks</h2>
-					<ul>
-						<li>List</li>
-						<li>Add</li>
-					</ul>
-
+					<div class="section-footer">
+						<a>Add a notebook</a>
+					</div>
 				</div>
 				<div class="col-sm-4">
 					<h2>Recent messages</h2>
