--- a/content/biz1/index.html
+++ b/content/biz1/index.html
@@ -7,7 +7,7 @@
 	<script>
 
 	$(document).ready(function() {
-	  renderMessages("#messages", 10, true, true);
+	  renderMessages("#messages", 3, false, true);
 	});
 
 	</script>
@@ -47,7 +47,7 @@
 							<h2>Recent messages</h2>							
 							<div id="messages"></div>
 							<div class="section-box">
-								Go to <a href="<!-- @path biz1/messages.html -->">inbox</a>
+								Go to <a href="<!-- @path biz1/messages.html -->">messages</a>
 							</div>
 						</div>
 					</div>
