--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script>
 
 	$(document).ready(function() {
-	  renderMessages("#messages", 10, true, true);
+	  renderMessages("#messages", 5, false, true);
 	});
 
 	</script>
