--- a/index.html
+++ b/index.html
@@ -19,32 +19,27 @@
 	<section id="main">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-sm-4">
-					<h2>Businesses</h2>
-					<div class="section-box">
-						<ul class="link-list">
-							<li>
-								<a href="<!-- @path biz1/index.html -->">Jane's Bakery</a><br />
-								ABN 66 123 456 789
-							</li>
-						</ul>
-					</div>
-					<div class="section-footer">
-						<a>Add a business</a>
-					</div>
-
-					<h2>Noteboooks</h2>
-					<div class="section-footer">
-						<a>Add a notebook</a>
-					</div>
+				<div class="col-sm-3">
+					<h2>Recently viewed</h2>
+					<a href="<!-- @path biz1/index.html -->" class="card">
+						<div class="heading">Jane's Bakery</div>
+						<div>ABN 66 123 456 789</div>
+					</a>
+							<div class="section-footer">
+								Add a <a href="#" data-toggle="modal" data-target="#add-biz-dialog">business</a> or a <a href="#" data-toggle="modal" data-target="#add-biz-dialog">notebook</a>
+							</div>
 				</div>
-				<div class="col-sm-4">
-					<h2>Recent messages</h2>
-					<div id="messages"></div>
-				</div>
-				<div class="col-sm-4">
-					<h2>News</h2>
-					<!-- @include _three_news_stories -->
+				<div class="col-sm-9">
+					<div class="row">
+						<div class="col-sm-6">
+							<h2>Recent messages</h2>
+							<div id="messages"></div>
+						</div>
+						<div class="col-sm-6">
+							<h2>News</h2>
+							<!-- @include _three_news_stories -->
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
