Improve message layout

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 					<h2>Recently viewed</h2>
 					<a href="<!-- @path biz1/index.html -->" class="card">
 						<div class="heading">Jane's Bakery</div>
-						<div>ABN 66 123 456 789</div>
+						<div class="abn">ABN 66 123 456 789</div>
 					</a>
-							<div class="section-footer">
-								Add a <a href="#" data-toggle="modal" data-target="#add-biz-dialog">business</a> or a <a href="#" data-toggle="modal" data-target="#add-biz-dialog">notebook</a>
-							</div>
+					<div class="section-footer">
+						Add a <a href="#" data-toggle="modal" data-target="#add-biz-dialog">business</a> or a <a href="#" data-toggle="modal" data-target="#add-biz-dialog">notebook</a>
+					</div>
 				</div>
 				<div class="col-sm-9">
 					<div class="row">
