--- a/content/biz1/services.html
+++ b/content/biz1/services.html
@@ -46,7 +46,50 @@
 						<div class="col-sm-12">
 							<h2>More services</h2>
 							<p>Search</p>
-							<p>IA</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-4">
+							<h3>Starting a business</h3>
+							<ul class="link-list">
+								<li><a href="#">Preparing yourself for business</a>
+								<li><a href="#">Trade marks and business names</a>
+								<li><a href="#">Registration and licenses to start business</a>
+							</ul>
+							<h3>Business planning</h3>
+							<ul class="link-list">
+								<li><a href="#">Link</a>
+								<li><a href="#">Link</a>
+								<li><a href="#">Link</a>
+							</ul>
+						</div>
+						<div class="col-sm-4">
+							<h3>Business structures and types</h3>
+							<ul class="link-list">
+								<li><a href="#">Link</a>
+								<li><a href="#">Link</a>
+								<li><a href="#">Link</a>
+							</ul>
+							<h3>Taxation, finance and insurance</h3>
+							<ul class="link-list">
+								<li><a href="#">Link</a>
+								<li><a href="#">Link</a>
+								<li><a href="#">Link</a>
+							</ul>
+						</div>
+						<div class="col-sm-4">
+							<h3>Selling products and services</h3>
+							<ul class="link-list">
+								<li><a href="#">Link</a>
+								<li><a href="#">Link</a>
+								<li><a href="#">Link</a>
+							</ul>
+							<h3>Emplying people</h3>
+							<ul class="link-list">
+								<li><a href="#">Link</a>
+								<li><a href="#">Link</a>
+								<li><a href="#">Link</a>
+							</ul>
 						</div>
 					</div>
 				</div>
