Add search boxes to services page

--- a/content/biz1/services.html
+++ b/content/biz1/services.html
@@ -28,9 +28,7 @@
 						</div>
 						<div class="col-sm-6">
 							<h2>Government agencies</h2>
-							<div class="section-box">
-								Search
-							</div>
+							<!-- @include _filter_box -->
 							<ul class="link-list">
 								<li><a href="#">ATO - Australian Taxation Office</a></li>
 								<li><a href="#">ASIC - Australian Investments and Securities Commission</a></li>
@@ -45,7 +43,7 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<h2>More services</h2>
-							<p>Search</p>
+							<!-- @include _filter_box -->
 						</div>
 					</div>
 					<div class="row">
