--- a/content/biz1/messages.html
+++ b/content/biz1/messages.html
@@ -30,9 +30,6 @@
 				<div class="col-sm-9">
 					<div class="row">
 						<div class="col-sm-12">
-							<h1 class="no-margin">Messages</h1>
-							<div class="sub-head">Sent to ABN 66 123 456 789 (Jane's Bakery)</div>
-
 							<div class="messages-toolbar">
 								<div class="btn-group" data-toggle="buttons">
 								  <label class="btn btn-default active" style="width: 70px;" onclick="updateMessages(false)">
@@ -42,29 +39,33 @@
 								    <input type="radio" name="options" autocomplete="off">Unread
 								  </label>
 								</div>
-								<!-- 
-								<div class="dropdown" style="display: inline-block;">
-									<a class="btn btn-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-										Newest first <span class="caret"></span>
-									</a>
-									<ul class="dropdown-menu" role="menu">
-										<li><a href="#">Newest first</a></li>
-										<li><a href="#">Oldest first</a></li>
-									</ul>
-								</div>
-								 -->
+								
 								<div class="dropdown" style="display: inline-block;">
 									<a class="btn btn-link dropdown-toggle" data-toggle="dropdown">
 										From anyone <span class="caret"></span>
 									</a>
 									<ul class="dropdown-menu" role="menu">
-										<li><a href="#">ATO</a></li>
-										<li><a href="#">ASIC</a></li>
-										<li><a href="#">...</a></li>
+										<li><a href="#">Australian Securities and Investments Commision</a></li>
+										<li><a href="#">Australian Taxation Office</a></li>
+									</ul>
+								</div>
+								<div class="dropdown" style="display: inline-block;">
+									<a class="btn btn-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+										Anytime <span class="caret"></span>
+									</a>
+									<ul class="dropdown-menu" role="menu">
+										<li><a href="#">Anytime</a></li>
+										<li role="presentation" class="divider"></li>
+										<li><a href="#">Today</a></li>
+										<li><a href="#">Yesterday</a></li>
+										<li><a href="#">This week</a></li>
+										<li><a href="#">Last week</a></li>
+										<li><a href="#">This month</a></li>
+										<li><a href="#">This year</a></li>
 									</ul>
 								</div>
 
-								<div style="float: right; width: 250px; margin-left: 5px;">
+								<div style="float: right; width: 200px; margin-left: 5px;">
 									<input type="text" class="form-control" placeholder="Search">
 								</div>
 
