--- a/content/biz1/message.html
+++ b/content/biz1/message.html
@@ -71,7 +71,7 @@
 				</div>
 				<div class="col-sm-9">
 					<div class="messages-toolbar" style="border: none;">
-						<a href="<!-- @path messages.html -->"><span class="glyphicon glyphicon-chevron-left" style="padding-right: 5px;"></span>Back</a>
+						<a href="<!-- @path messages.html -->"><span class="glyphicon glyphicon-chevron-left" style="padding-right: 5px;"></span>Messages</a>
 					</div>
 					<div class="message-viewer">
 						<div class="row">
