--- a/content/biz1/message.html
+++ b/content/biz1/message.html
@@ -27,6 +27,14 @@
 
 	$(document).ready(function() {
 		renderMessage();
+
+		var textbox = $("#add-tag")
+		textbox.keypress(function(e) {
+		    if(e.which == 13) {
+		        $("#msg-tags").append('<div><a href="#">' + textbox.val() + '</a></div>');
+		        textbox.val('');
+		    }
+		});
 	});
 
 	function renderMessage()
