--- a/content/biz1/manage-rep.html
+++ b/content/biz1/manage-rep.html
@@ -15,8 +15,10 @@
 					<!-- @include _sidebar -->
 				</div>
 				<div class="col-sm-9">
-					<h1 class="no-margin">Representatives</h1>
-					<div class="sub-head">Jane's Bakery ABN 66 123 456 789</div>
+					<a href="<!-- @path ./representatives.html -->"><span class="glyphicon glyphicon-chevron-left" style="padding-right: 5px;"></span>Representatives</a>
+					<h1>A&amp;B Accounting</h1>
+					
+					
 				</div>
 			</div>
 		</div>
