--- a/content/biz1/manage-rep.html
+++ b/content/biz1/manage-rep.html
@@ -34,7 +34,7 @@
 						</thead>
 						<tbody>
 							<tr>
-								<td>ATO</td>
+								<td rowspan="2">ATO</td>
 								<td>Business Activity Statements</td>
 								<td>
 									<ul class="permissions-list editable">
@@ -44,6 +44,15 @@
 										<li><input type="checkbox" checked="checked" /> Update</li>	
 									</ul>
 								</td>
+							</tr>
+							<tr>
+								<td>
+									+ <a href="#">Add service from the ATO</a>
+								</td>
+								<td></td>
+							</tr>
+							<tr>
+								<td colspan="3">+ <a href="#">Add services from another agency</a></td>
 							</tr>
 						</tbody>
 					</table>
