--- a/content/biz1/manage-rep.html
+++ b/content/biz1/manage-rep.html
@@ -15,8 +15,12 @@
 					<!-- @include _sidebar -->
 				</div>
 				<div class="col-sm-9">
+					
 					<a href="<!-- @path ./representatives.html -->"><span class="glyphicon glyphicon-chevron-left" style="padding-right: 5px;"></span>Representatives</a>
 					<h1 class="no-margin">
+						<div class="pull-right">
+							<a href="#" class="btn btn-danger">De-authorise A&amp;B Accounting</a>
+						</div>
 						A&amp;B Accounting
 						<div class="sub-head">ABN 22 123 456 789</div>
 					</h1>
