--- a/content/biz1/representatives.html
+++ b/content/biz1/representatives.html
@@ -24,18 +24,19 @@
 					<table class="table" style="margin: 30px 0;">
 						<thead>
 							<tr>
-								<th class="spring">Representative</th>
+								<th>Representative</th>
 								<th colspan="3">Authorisations</th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr>
-								<td class="spring">
+								<td>
 									<div style="font-weight: 600">A&amp;B Accounting</div>
-										ABN 22 123 456 789
+									<div>ABN 22 123 456 789</div>
+									<div style="margin: 10px 0;"><a href="<!-- @path ./manage-rep.html -->">Manage authorisations</a></div>
 								</td>
-								<td class="nowrap">ATO - Business Activity Statements</td>
-								<td class="nowrap">
+								<td>ATO - Business Activity Statements</td>
+								<td>
 									<ul class="permissions-list">
 										<li>View</li>
 										<li>Prepare</li>
@@ -43,8 +44,28 @@
 										<li>Update</li>	
 									</ul>
 								</td>
-								<td class="nowrap">
-									<td class="spring"><a href="<!-- @path ./manage-rep.html -->" class="btn btn-default">Manage authorisations</a></td>
+							</tr>
+							<tr>
+								<td rowspan="2">
+									<div style="font-weight: 600">Mr Peter Citizen</div>
+									<div>myGov user XR123456</div>
+									<div style="margin: 10px 0;"><a href="#">Manage authorisations</a></div>
+								</td>
+								<td>ATO - Super</td>
+								<td>
+									<ul class="permissions-list">
+										<li>View</li>
+										<li>Lodge transfer</li>
+									</ul>
+								</td>
+							</tr>
+							<tr>
+								<td>Centerlink - Family Tax Benefit</td>
+								<td>
+									<ul class="permissions-list">
+										<li>View</li>
+										<li>Update</li>
+									</ul>
 								</td>
 							</tr>
 						</tbody>
