--- a/content/biz1/manage-rep.html
+++ b/content/biz1/manage-rep.html
@@ -51,21 +51,22 @@
 							</tr>
 							<tr>
 								<td>
-									+ <a href="#">Add service from the ATO</a>
+									<a href="#" class="btn btn-default">Add services from the ATO</a>
 								</td>
 								<td></td>
 							</tr>
-							<tr>
-								<td colspan="3">+ <a href="#">Add services from another agency</a></td>
-							</tr>
+							
 						</tbody>
 					</table>
+					<a href="#"  class="btn btn-default">Add services from another agency</a>
 					
+					<div style="margin-top: 60px;">
 					<a href="<!-- @path ./representatives.html -->" class="btn btn-primary">Save changes</a> 
 					<span class="or-cancel">
 						<span>or</span>
 						<a href="<!-- @path ./representatives.html -->">Cancel</a>
 					</span>
+					</div>
 				</div>
 			</div>
 		</div>
