--- a/content/biz1/add-rep.html
+++ b/content/biz1/add-rep.html
@@ -15,7 +15,7 @@
 					<!-- @include _sidebar -->
 				</div>
 				<div class="col-sm-9">
-					<a href="<!-- @path ./representatives.html -->"><span class="glyphicon glyphicon-chevron-left" style="padding-right: 5px;"></span>Representatives</a>
+					<a href="<!-- @path ./representatives.html -->" class="back"><span class="glyphicon glyphicon-chevron-left" style="padding-right: 5px;"></span>Representatives</a>
 					<h1 class="no-margin">Add a representative</h1>
 
 					<!--						
