--- a/content/biz1/manage-rep.html
+++ b/content/biz1/manage-rep.html
@@ -16,7 +16,7 @@
 				</div>
 				<div class="col-sm-9">
 					
-					<a href="<!-- @path ./representatives.html -->"><span class="glyphicon glyphicon-chevron-left" style="padding-right: 5px;"></span>Representatives</a>
+					<a href="<!-- @path ./representatives.html -->" class="back"><span class="glyphicon glyphicon-chevron-left" style="padding-right: 5px;"></span>Representatives</a>
 					<h1 class="no-margin">
 						<div class="pull-right">
 							<a href="#" class="btn btn-danger">De-authorise A&amp;B Accounting</a>
