Style auth rep titles

--- a/content/biz1/representatives.html
+++ b/content/biz1/representatives.html
@@ -32,7 +32,7 @@
 							<tr>
 								<td>
 									<div style="font-weight: 600">A&amp;B Accounting</div>
-									<div>ABN 22 123 456 789</div>
+									<div class="light-text">ABN 22 123 456 789</div>
 									<div style="margin: 10px 0;"><a href="<!-- @path ./manage-rep.html -->">Manage authorisations</a></div>
 								</td>
 								<td>ATO - Business Activity Statements</td>
@@ -48,7 +48,7 @@
 							<tr>
 								<td rowspan="3">
 									<div style="font-weight: 600">Mr Peter Citizen</div>
-									<div>myGov user XR123456</div>
+									<div class="light-text">myGov User ID XR123456</div>
 									<div style="margin: 10px 0;"><a href="#">Manage authorisations</a></div>
 								</td>
 								<td>ATO - Business Activity Statements</td>
