Add ind/biz tabs

--- a/content/biz1/representatives.html
+++ b/content/biz1/representatives.html
@@ -82,7 +82,7 @@
 						</tbody>
 					</table>
 					
-					<a href="<!-- @path ./add-rep.html -->" class="btn btn-primary">Add a representative</a>
+					<a href="<!-- @path ./add-rep.html -->" class="btn btn-primary">Add representative</a>
 				</div>
 			</div>
 		</div>
