Fixe case issue

--- a/content/biz1/ram2.html
+++ b/content/biz1/ram2.html
@@ -22,9 +22,9 @@
 						<area shape="rect" alt="" title="" coords="270,26,498,110" href="ram2.html" target="" />
 						<area shape="rect" alt="" title="" coords="514,28,740,110" href="ram3.html" target="" />
 						<area shape="rect" alt="" title="" coords="26,126,258,212" href="ram4.html" target="" />
-						<area shape="rect" alt="" title="" coords="26,332,150,458" href="RAM5.html" target="" />
-						<area shape="rect" alt="" title="" coords="172,334,292,458" href="RAM6.html" target="" />
-						<area shape="rect" alt="" title="" coords="318,336,436,460" href="RAM7.html" target="" />
+						<area shape="rect" alt="" title="" coords="26,332,150,458" href="ram5.html" target="" />
+						<area shape="rect" alt="" title="" coords="172,334,292,458" href="ram6.html" target="" />
+						<area shape="rect" alt="" title="" coords="318,336,436,460" href="ram7.html" target="" />
 					</map>
 					
 					<img usemap="#map" src="<!-- @path assets/images/RAM2.png -->" />
