--- a/content/biz1/add-rep.html
+++ b/content/biz1/add-rep.html
@@ -16,7 +16,7 @@
 				</div>
 				<div class="col-sm-9">
 					<a href="<!-- @path ./representatives.html -->" class="back"><span class="glyphicon glyphicon-chevron-left" style="padding-right: 5px;"></span>Representatives</a>
-					<h1 class="no-margin">Add representative</h1>
+					<h1 class="no-margin">Add authorised representative</h1>
 
 					<div role="tabpanel">
 					
