--- a/content/biz1/index.html
+++ b/content/biz1/index.html
@@ -47,7 +47,7 @@
 							<h2>Recent messages</h2>							
 							<div id="messages"></div>
 							<div class="section-box">
-								Go to <a href="<!-- @path biz1/messages.html -->">messages</a>
+								Go to <a href="<!-- @path biz1/messages.html -->">inbox</a>
 							</div>
 						</div>
 					</div>
