--- a/content/biz1/ram2.html
+++ b/content/biz1/ram2.html
@@ -15,7 +15,7 @@
 					<!-- @include _sidebar -->
 				</div>
 				<div class="col-sm-9">
-					<h1>Representatives</h1>
+					<h1>Authorise</h1>
 					
 					<map name="map">
 						<area shape="rect" alt="" title="" coords="30,27,259,114" href="ram8.html" target="" />
