--- a/content/biz1/ram6.html
+++ b/content/biz1/ram6.html
@@ -15,7 +15,7 @@
 					<!-- @include _sidebar -->
 				</div>
 				<div class="col-sm-9">
-					<h1>Representatives</h1>
+					<h1>Authorise</h1>
 					
 					<map name="map">
 						<area shape="rect" alt="" title="" coords="28,22,150,144" href="ram5.html" target="" />
