--- a/content/biz1/ram8.html
+++ b/content/biz1/ram8.html
@@ -15,7 +15,7 @@
 					<!-- @include _sidebar -->
 				</div>
 				<div class="col-sm-9">
-					<h1>Add representative</h1>
+					<h1>Add authorised representative</h1>
 					
 					<map name="map">
 						<area shape="rect" alt="" title="" coords="607,9,638,42" href="representatives.html" target="" />
