--- a/content/biz1/settings.html
+++ b/content/biz1/settings.html
@@ -15,7 +15,7 @@
 					<!-- @include _sidebar -->
 				</div>
 				<div class="col-sm-9">
-					<h1 class="no-margin">Notification settings</h1>
+					<h1 class="no-margin">Notifications and alerts</h1>
 					<div class="sub-head">Jane's Bakery ABN 66 123 456 789</div>
 				</div>
 			</div>
