--- a/content/biz1/ram5.html
+++ b/content/biz1/ram5.html
@@ -15,7 +15,7 @@
 					<!-- @include _sidebar -->
 				</div>
 				<div class="col-sm-9">
-					<h1>Representatives</h1>
+					<h1>Authorise</h1>
 					
 					<map name="map">
 
