Message folders, I want to page
+ Add message folders
+ Add "I want to..." page to sidebar

--- a/content/biz1/folder2.html
+++ b/content/biz1/folder2.html
@@ -12,7 +12,7 @@
 
 	function updateMessages(unreadyOnly)
 	{
-		renderMessages("#messages", 10, unreadyOnly, false);	
+		renderMessages("#messages", 10, unreadyOnly, false, 'Australian Securities and Investments Commision');	
 	}
 
 	</script>
