--- a/content/biz1/services.html
+++ b/content/biz1/services.html
@@ -17,8 +17,7 @@
 				<div class="col-sm-9">
 					<div class="row">
 						<div class="col-sm-12">
-							<h1 class="no-margin">Services</h1>
-							<div class="sub-head">Jane's Bakery ABN 66 123 456 789</div>
+							<h1>Services</h1>
 						</div>
 					</div>
 					<div class="row">
