--- a/content/biz1/message.html
+++ b/content/biz1/message.html
@@ -77,7 +77,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-3">
-					<!-- @include _sidebar -->
+					<!-- @include _sidebar_folders -->
 				</div>
 				<div class="col-sm-9">
 					<div class="messages-toolbar" style="border: none;">
